<resources>
    <string name="app_name">MyFirstCalc</string>
    <string name="calc_button_1">1</string>
    <string name="calc_button_2">2</string>
    <string name="calc_button_3">3</string>
    <string name="calc_button_4">4</string>
    <string name="calc_button_5">5</string>
    <string name="calc_button_6">6</string>
    <string name="calc_button_7">7</string>
    <string name="calc_button_8">8</string>
    <string name="calc_button_9">9</string>
    <string name="calc_button_0">0</string>
    <string name="calc_button_dot">.</string>

    <string name="calc_button_add">+</string>
    <string name="calc_button_sub">-</string>
    <string name="calc_button_mul">x</string>
    <string name="calc_button_div">/</string>
    <string name="calc_button_equal">=</string>
    <string name="calc_button_remove_all">Remove All</string>
    <string name="calc_logo">CALCULATOR</string>
    <string name="settings">Settings</string>
    <string name="theme1">Theme1</string>
    <string name="theme2">Theme2</string>
    <string name="theme3">Theme3</string>
    <string name="theme4">Theme4</string>
    <string name="choose_your_theme">Choose your Theme</string>

</resources>