<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calc_background_color"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/calc_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/calc_margin_logo"
        android:text="@string/calc_logo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/result_textview_size"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calc_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/calc_button_margin"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/result_textview_size"
        app:layout_constraintBottom_toTopOf="@id/calc_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_remove_all"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_1"
        app:layout_constraintBottom_toTopOf="@id/calc_button_4"
        app:layout_constraintEnd_toStartOf="@id/calc_button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_2"
        app:layout_constraintBottom_toTopOf="@id/calc_button_5"
        app:layout_constraintEnd_toStartOf="@id/calc_button_3"
        app:layout_constraintStart_toEndOf="@+id/calc_button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_3"
        app:layout_constraintBottom_toTopOf="@id/calc_button_6"
        app:layout_constraintEnd_toStartOf="@id/calc_button_add"
        app:layout_constraintStart_toEndOf="@+id/calc_button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_add"
        app:layout_constraintBottom_toTopOf="@id/calc_button_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calc_button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_4"
        app:layout_constraintBottom_toTopOf="@id/calc_button_7"
        app:layout_constraintEnd_toStartOf="@id/calc_button_5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_5"
        app:layout_constraintBottom_toTopOf="@id/calc_button_8"
        app:layout_constraintEnd_toStartOf="@id/calc_button_6"
        app:layout_constraintStart_toEndOf="@+id/calc_button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_6"
        app:layout_constraintBottom_toTopOf="@id/calc_button_9"
        app:layout_constraintEnd_toStartOf="@id/calc_button_sub"
        app:layout_constraintStart_toEndOf="@+id/calc_button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_sub"
        app:layout_constraintBottom_toTopOf="@id/calc_button_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calc_button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_7"
        app:layout_constraintBottom_toTopOf="@id/calc_button_0"
        app:layout_constraintEnd_toStartOf="@id/calc_button_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_8"
        app:layout_constraintBottom_toTopOf="@id/calc_button_dot"
        app:layout_constraintEnd_toStartOf="@id/calc_button_9"
        app:layout_constraintStart_toEndOf="@+id/calc_button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_9"
        app:layout_constraintBottom_toTopOf="@id/calc_button_equal"
        app:layout_constraintEnd_toStartOf="@id/calc_button_mul"
        app:layout_constraintStart_toEndOf="@+id/calc_button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_mul"
        app:layout_constraintBottom_toTopOf="@id/calc_button_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calc_button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_0"
        app:layout_constraintBottom_toTopOf="@id/remove_all"
        app:layout_constraintEnd_toStartOf="@id/calc_button_dot"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_dot"
        app:layout_constraintBottom_toTopOf="@id/remove_all"
        app:layout_constraintEnd_toStartOf="@id/calc_button_equal"
        app:layout_constraintStart_toEndOf="@id/calc_button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_div"
        app:layout_constraintBottom_toTopOf="@id/remove_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calc_button_equal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc_button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/calc_button_equal"
        app:layout_constraintBottom_toTopOf="@id/remove_all"
        app:layout_constraintEnd_toStartOf="@id/calc_button_div"
        app:layout_constraintStart_toEndOf="@id/calc_button_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calc_button_margin"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>