<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/calc_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/calc_button_1"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/calc_button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calc_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/calc_button_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/calc_button_3"
        app:layout_constraintStart_toEndOf="@+id/calc_button_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calc_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/calc_button_3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_button_2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calc_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_4"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/calc_button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_button_1"
        />

    <Button
        android:id="@+id/calc_button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_5"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/calc_button_6"
        app:layout_constraintStart_toEndOf="@+id/calc_button_4"
        app:layout_constraintTop_toBottomOf="@id/calc_button_2"/>

    <Button
        android:id="@+id/calc_button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_6"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_button_5"
        app:layout_constraintTop_toBottomOf="@id/calc_button_3"/>

    <Button
        android:id="@+id/calc_button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_7"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/calc_button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_button_4"
        />

    <Button
        android:id="@+id/calc_button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_8"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/calc_button_9"
        app:layout_constraintStart_toEndOf="@+id/calc_button_7"
        app:layout_constraintTop_toBottomOf="@id/calc_button_5"/>

    <Button
        android:id="@+id/calc_button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_9"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_button_8"
        app:layout_constraintTop_toBottomOf="@id/calc_button_6"/>
    <Button
        android:id="@+id/calc_button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_0"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="@id/calc_button_8"
        app:layout_constraintStart_toStartOf="@id/calc_button_7"
        app:layout_constraintTop_toBottomOf="@id/calc_button_7"/>
    <Button
        android:id="@+id/calc_button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_dot"
        android:layout_margin="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/calc_button_9"
        app:layout_constraintStart_toStartOf="@+id/calc_button_9"
        app:layout_constraintTop_toBottomOf="@id/calc_button_9"/>
        />
</androidx.constraintlayout.widget.ConstraintLayout>